--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -1874,6 +1874,16 @@
 
             </RelativeLayout>
 
+
+            <RelativeLayout
+                android:id="@+id/relativeLayoutContainer"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/topRlOuter"
+                android:visibility="gone"
+                >
+            </RelativeLayout>
+
             <!-- top bar layout-->
             <RelativeLayout
                 android:id="@+id/topRlOuter"
@@ -1948,15 +1958,6 @@
                             android:textColor="@color/white"
                             android:textSize="44px"/>
 
-                        <!--<TextView-->
-                        <!--android:id="@+id/temptext"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:gravity="center"-->
-                        <!--android:text="4.5"-->
-                        <!--android:textColor="@color/white"-->
-                        <!--android:textSize="38px"/>-->
-
                     </LinearLayout>
 
 
@@ -1971,41 +1972,6 @@
                         android:gravity="center_vertical"
                         >
 
-                        <!--<TextView-->
-                        <!--android:id="@+id/textViewTitleBarOnlineHours"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:gravity="center"-->
-                        <!--android:text="@string/Duty_Hours"-->
-                        <!--android:textColor="@color/white"-->
-                        <!--android:textSize="42px"/>-->
-
-
-                        <!--<TextView-->
-                        <!--android:id="@+id/textViewTitleBarOvalText"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="60px"-->
-                        <!--android:layout_marginLeft="20px"-->
-                        <!--android:layout_marginRight="20px"-->
-                        <!--android:layout_toRightOf="@+id/textViewTitleBarOnlineHours"-->
-                        <!--android:gravity="center"-->
-                        <!--android:singleLine="true"-->
-                        <!--android:text="HH:MM"-->
-                        <!--android:textColor="@color/white"-->
-                        <!--android:textSize="42px"-->
-                        <!--/>-->
-
-                        <!--<ProgressBar-->
-                        <!--android:id="@+id/progressBarDriverOnlineHours"-->
-                        <!--android:layout_width="50px"-->
-                        <!--android:layout_height="50px"-->
-                        <!--android:layout_marginLeft="45px"-->
-                        <!--android:layout_marginTop="5px"-->
-                        <!--android:layout_toRightOf="@+id/textViewTitleBarOnlineHours"-->
-                        <!--android:src="@drawable/oval"-->
-                        <!--android:tag="mwar"-->
-                        <!--android:visibility="gone"-->
-                        <!--/>-->
 
                         <ImageView
                             android:id="@+id/imageViewNotification"
@@ -2033,6 +1999,18 @@
 
 
                     </RelativeLayout>
+
+                    <Button
+                        android:id="@+id/buttonAttachedCustomers"
+                        android:layout_width="80px"
+                        android:layout_height="80px"
+                        android:text="AC"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/text_size_24"
+                        android:layout_toLeftOf="@+id/RelativeLayoutNotificationCenter"
+                        android:layout_centerVertical="true"
+                        />
+
                 </RelativeLayout>
             </RelativeLayout>
         </RelativeLayout>
