--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -125,6 +125,10 @@
         <item>@color/yellow_jugnoo</item>
         <item>@color/transparent</item>
     </integer-array>
+
+
+
+    <color name="text_color">#242930</color>
     
    
 </resources>
