--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_customer_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_customer_info.xml
@@ -8,7 +8,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200px">
+        android:layout_height="200px"
+        android:background="@color/white"
+        >
 
         <TextView
             android:id="@+id/textViewName"
