--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_attached_customers.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_attached_customers.xml
@@ -3,7 +3,7 @@
     android:id="@+id/linearLayoutRoot"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="412px"
     android:orientation="vertical"
     >
 
