feature_pool: switch customer layout

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -255,6 +255,7 @@
                                             android:layout_alignParentBottom="true">
 
                                             <ImageView
+                                                android:id="@+id/customerMarker"
                                                 android:layout_width="35px"
                                                 android:layout_height="30px"
                                                 android:layout_centerVertical="true"
