--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_customer_brief_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_customer_brief_info.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout android:id="@+id/linearLayoutRoot"
+              xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="300px"
               android:layout_height="78px"
-              android:id="@+id/linearLayoutRoot"
-    android:orientation="horizontal"
               android:gravity="center_vertical"
+              android:orientation="horizontal"
     >
 
-        <ImageView
-            android:id="@+id/passangerImage"
-            android:layout_width="60px"
-            android:layout_height="60px"
-            android:layout_marginLeft="25px"
-            android:layout_marginRight="25px"
-            android:src="@drawable/superhappy_face"
+    <ImageView
+        android:id="@+id/passangerImage"
+        android:layout_width="60px"
+        android:layout_height="60px"
+        android:layout_marginLeft="25px"
+        android:layout_marginRight="25px"
+        android:src="@drawable/superhappy_face"
 
-            />
+        />
 
-        <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-            android:id="@+id/driverPassengerName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Shanker"
-            android:textColor="@color/bg_grey_opaque"
-            android:textSize="40px" />
+    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+        android:id="@+id/driverPassengerName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Shanker"
+        android:textColor="@color/bg_grey_opaque"
+        android:textSize="40px"/>
 
 </LinearLayout>
