--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
@@ -19,12 +19,23 @@
 
 
             <TextView
+                android:id="@+id/textViewOrderId"
+                android:layout_width="380px"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="Order Id"
+                android:textColor="@color/bg_grey_opaque"
+                android:textSize="42px"
+                android:visibility="visible"/>
+
+            <TextView
                 android:id="@+id/textViewCustomerName"
                 android:layout_width="380px"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:text="Aneesh"
                 android:textColor="@color/bg_grey_opaque"
+                android:layout_marginTop="15px"
                 android:textSize="42px"
                 android:visibility="visible"/>
 
@@ -45,7 +56,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginLeft="7px"
-                android:layout_marginTop="20px">
+                android:layout_marginTop="20px"
+                android:layout_marginBottom="10px">
 
                 <ImageView
                     android:id="@+id/deliveryMarker"
@@ -72,7 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginTop="15px"
+            android:layout_marginTop="25px"
             android:layout_marginLeft="70px"
             android:orientation="vertical">
 
@@ -105,7 +117,7 @@
                 android:id="@+id/markDeliveryRl"
                 android:layout_width="230px"
                 android:layout_height="70px"
-                android:layout_marginTop="20px"
+                android:layout_marginTop="25px"
                 android:background="@drawable/menu_black_btn_normal_rounded">
 
 
