feature_dodo: waypoints api

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_driver_request.xml
@@ -86,18 +86,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginRight="30px"
                 android:layout_marginTop="0px"
-                android:src="@drawable/auto_small_icon"
-                android:visibility="gone"
-                android:tag="mwar"/>
-
-            <ImageView
-                android:id="@+id/imageViewRequestTypePool"
-                android:layout_width="65px"
-                android:layout_height="38px"
-                android:layout_centerHorizontal="true"
-                android:layout_marginRight="30px"
-                android:layout_marginTop="0px"
-                android:src="@drawable/pool_request_icon"
+                android:src="@drawable/ic_auto_request"
+                android:visibility="visible"
                 android:tag="mwar"/>
 
             <TextView
