--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_dodo_return_reasons.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_dodo_return_reasons.xml
@@ -13,15 +13,6 @@
         android:layout_height="96px">
 
 
-        <ImageView
-            android:id="@+id/imageViewLineLeft"
-            android:layout_width="160px"
-            android:layout_height="2px"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="30px"
-            android:src="@color/black"/>
-
-
         <TextView
             android:id="@+id/textViewTitle"
             android:layout_width="wrap_content"
@@ -33,15 +24,14 @@
             android:textSize="36px"/>
 
         <ImageView
-            android:id="@+id/imageViewLineRight"
-            android:layout_width="160px"
-            android:layout_height="2px"
-            android:layout_toRightOf="@+id/textViewTitle"
+            android:id="@+id/imageViewBack"
+            android:layout_width="60.7px"
+            android:layout_height="76.9px"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20px"
-            android:src="@color/black"/>
-
-
+            android:layout_marginLeft="10px"
+            android:padding="20px"
+            android:layout_marginTop="25px"
+            android:src="@drawable/arrow"/>
     </RelativeLayout>
 
 
@@ -63,7 +53,7 @@
 
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/listViewReturnOptions"
+                android:id="@+id/recyclerViewReturnOptions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40px"
@@ -73,13 +63,13 @@
 
 
             <Button
-                android:id="@+id/buttonCancelRide"
+                android:id="@+id/buttonSubmit"
                 android:layout_width="648px"
                 android:layout_height="100px"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30px"
                 android:background="@drawable/new_orange_btn_selector_rounded"
-                android:text="@string/ok"
+                android:text="@string/submit"
                 android:textColor="@drawable/white_color_selector"
                 android:textSize="@dimen/button_text_size"/>
 
